# training-projects

./: README.md
ai_agents/agente_diversos/: README.md  agent_00.py  ai_server.py  pyproject.toml
ai_agents/audio_transcript/: legendador.py  main.ipynb  main.py  pyproject.toml
ai_agents/gerador_audio/: g_audio_00.ipynb  pyproject.toml
ai_agents/gerador_imagens/: main.ipynb  pyproject.toml
everyday/: README.MD  everyday.py
everyday/apps/: config.py  controle.py  diversos.py  helpers.py  navegador.py  sms.py
everyday/data/: controle_execucao.json  list_programs.json  sms.json
merc_financeiro/: Carteira.xlsx  README.md  carteira.ipynb  cotacoes.ipynb  exemplos.py  pyproject.toml
merc_financeiro/criptomoedas/: agente_cripto.py
