[project]
name = "merc-financeiro"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.6,<4.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[tool.poetry]
packages = [{include = "merc_financeiro", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
